<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:padding="5dp">

    <include layout="@layout/toolbar_support"></include>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        cardview:cardCornerRadius="5dp"
        cardview:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/box1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="190dp"
                android:background="@drawable/quimica"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:text="Química - Separação de misturas (Mooca)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/descQuimica"
                android:layout_width="356dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:text="@string/descricaoQuimica"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="12sp"
                tools:text="Reforço do método que faz uso das diferenças no grau de adsorção e das diferenças de solubilidade das várias substâncias" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="107dp"
                    android:layout_height="wrap_content"
                    android:text="Participar" />

                <Button
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="Pular" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        cardview:cardCornerRadius="5dp"
        cardview:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/box2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="fill_parent"
                android:layout_height="190dp"
                android:background="@drawable/informatica"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="356dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:text="Excel Básico (Butantã)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/descriçaoExcel"
                android:layout_width="356dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:text="@string/descricaoExcel"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="107dp"
                    android:layout_height="wrap_content"
                    android:text="Participar" />

                <Button
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="Pular" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        cardview:cardCornerRadius="5dp"
        cardview:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/box3"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="fill_parent"
                android:layout_height="190dp"
                android:background="@drawable/radio"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="356dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:text="Manuseio de Equipamentos (Jabaquara)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/descriçaoRadio"
                android:layout_width="356dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:text="@string/descricaoRadio"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="107dp"
                    android:layout_height="wrap_content"
                    android:text="Participar" />

                <Button
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="Pular" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        cardview:cardCornerRadius="5dp"
        cardview:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/box4"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="fill_parent"
                android:layout_height="190dp"
                android:background="@drawable/enfermagem2"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="356dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:text="Técnicas de Enfermagem (Paulista)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/descriçaoEnfermagem"
                android:layout_width="356dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:text="@string/descricaoEnfermagem"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="107dp"
                    android:layout_height="wrap_content"
                    android:text="Participar" />

                <Button
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="Pular" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="320dp"
        android:layout_gravity="center_horizontal"
        cardview:cardCornerRadius="5dp"
        cardview:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/box5"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="0dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="fill_parent"
                android:layout_height="190dp"
                android:background="@drawable/enfermagem"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="356dp"
                android:layout_height="27dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dp"
                android:text="Como calcular nutrientes (Sto. Amaro)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/descriçao"
                android:layout_width="356dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:text="@string/descricaoEnfermagem2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#333333"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="107dp"
                    android:layout_height="wrap_content"
                    android:text="Participar" />

                <Button
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:text="Pular" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>